[project]
name = "notebooks"
version = "0.1.0"
description = "Sopme ronash notebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "polars>=1.33.1",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "widgetsnbextension>=4.0.14",
]
